RESOLVED FIXED294935
[JSC] operationCopyOnWriteArrayIndexOfString continues on exceptions
https://bugs.webkit.org/show_bug.cgi?id=294935
Summary [JSC] operationCopyOnWriteArrayIndexOfString continues on exceptions
Shu-yu Guo
Reported 2025-06-24 15:24:40 PDT
<rdar://153522603> Should be using OPERATION_RETURN_IF_EXCEPTION instead of RETURN_IF_EXCEPTION.
Attachments
Shu-yu Guo
Comment 1 2025-06-24 15:46:09 PDT
Alexey Proskuryakov
Comment 2 2025-06-25 13:40:12 PDT
*** Bug 294934 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2025-06-25 20:37:12 PDT
Committed 296649@main (773e875bad14): <https://commits.webkit.org/296649@main> Reviewed commits have been landed. Closing PR #47142 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.